<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/main_close_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:icon="@drawable/ic_baseline_close_24"
        app:iconTint="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backToPreviousPage"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        app:lottie_rawRes="@raw/correct_check_animation"
        app:lottie_autoPlay="true"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/resultTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:text="@string/correctTitle"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/correctDesc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTitle"
        app:layout_constraintVertical_bias="0.115" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:background="@drawable/radio_flat_selected"
        android:text="@string/backToQuestionPage"
        android:textSize="14sp"
        app:fontFamily="@font/proxima_nova_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultDescription"
        app:layout_constraintVertical_bias="0.588"
        app:rippleColor="@color/colorAccent"
        android:onClick="backToPreviousPage"
        />
</androidx.constraintlayout.widget.ConstraintLayout>